# vectorcxx

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  Config.cmake.in  README.md  build.rs  docker-compose.yml  justfile  project.json  vcpkg-configuration.json  vcpkg.json  vcpkg_manifest.json
.cargo/: config.toml
.github/workflows/: github-ci.yml
ci/dev_image/: Dockerfile
ci/dev_image/vcpkg_registry/ports/corrosion/: portfile.cmake  vcpkg.json
ci/dev_image/vcpkg_registry/ports/rs-rdkafka/: vcpkg.json
ci/dev_image/vcpkg_registry/triplets/: arm64-linux.cmake  x64-linux-haswell.cmake
ci/dev_image/vcpkg_registry/versions/: baseline.json
ci/dev_image/vcpkg_registry/versions/c-/: corrosion.json
ci/dev_image/vcpkg_registry/versions/r-/: rs-rdkafka.json
cmake/: process_resources.cmake  rust_bridge.cmake
patch/: CHANGELOG.md  Cargo.patch.json  Cargo.toml
scripts/: justfile
src/: config_event.rs  lib.rs  main.cpp  memory_queue_client.rs  model.rs  sw_utils.cpp  sw_utils.h  topology.rs  topology_controller.rs
src/vectorcxx/: cxx_memory_queue_client.cpp  cxx_memory_queue_client.h
tests/: main_test.cpp  memory_queue_client_test.cpp  test_driver.cpp  topology_test.cpp  vector_test_helper.cpp  vector_test_helper.h
tests/data/: batch_file_to_file.json  batch_file_to_kafka.json  file_to_console.json  file_to_file.json  file_to_file_invalid.json  host_metrics_to_memory_queue.json  http_json_to_memory_queue.json  http_to_file.json  http_to_file_with_transform.json  http_to_memory_queue.json  http_to_memory_queue_with_parsing.json  stdin_to_file.json  stdin_to_file_with_transform.json
tests/data/source/: http.json
tests/data/source_with_transform/: http_with_transform.json
tests/data/transform/: add_field.json
vcpkg_registry/ports/corrosion/: portfile.cmake
vcpkg_registry/ports/rs-rdkafka/: portfile.cmake
vcpkg_registry/versions/: baseline.json
vcpkg_registry/versions/c-/: corrosion.json
