[package]
name = "vectorcxx"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.78"
# without disabling default features, cargo will complain `libz-sys` feature is required but vector doesn't have it
# for release, use "vector = { git = "https://github.com/yanhuangdata/vector.git", branch = "feature/vector-lib" }"
# for local repo test, use "vector = { path = "{path_to_local_vector_repo}" }"
vector = { git = "https://github.com/yanhuangdata/vector.git", branch = "feature/vector-upgrade", features = [
    "api",
    "api-client",
    "enrichment-tables",
    "sinks",
    "sources",
    "sources-dnstap",
    "transforms",
    "unix",
    "vrl-cli",
    "custom-sasl",
    "sources-internal_logs",
    "sources-internal_metrics",
], default-features = false  }
tempfile = "3.2.0"
futures = "0.3.17"
tokio = { version = "1.13.0", features = ["test-util"] }
tokio-test = "0.4.2"
serde_json = { version = "1.0.68" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time", "local-time", "fmt"] }
time = { version = "0.3.15", features = ["macros"] }

[build-dependencies]
cxx-build = "1.0.73"

[lib]
crate-type = ["staticlib"]
# below config options make the the build of dynamic lib available
#crate-type = ["cdylib"]

#[profile.dev]
#rpath = true