[package]
name = "vectorcxx"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.80"
# without disabling default features, cargo will complain `libz-sys` feature is required but vector doesn't have it
vector = { path = "./vector", default-features = true }
tempfile = "3.2.0"
futures = "0.3.17"
tokio = { version = "1.13.0", features = ["test-util"] }
tokio-test = "0.4.2"
serde_json = { version = "1.0.68" }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "time", "local-time", "fmt"] }
time = { version = "0.3.15", features = ["macros"] }
# this is for resolving the dependency conflict between rust-rdkafka and aysnc-compression in vector when upgrading rust-rdkafka to 1.9.2
# zstd-sys = "2.0.1+zstd.1.5.2"

[build-dependencies]
cxx-build = "1.0.73"

[lib]
crate-type = ["staticlib"]
# below config options make the the build of dynamic lib available
#crate-type = ["cdylib"]

#[profile.dev]
#rpath = true